maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
	while (!estSurBiscuit){
		var i = random3()
		match i {
			case 0 => if (!estFaceMur){avance()} else {}
			case 1 => gauche()
			case 2 => droite()
		}
	}
	prendBiscuit()
    // Your code here 
}
